# Mathics3-notebook-frontends

./: .gitignore  .pre-commit-config.yaml  Makefile  NEWS.md  README.md  pyproject.toml
admin-tools/: make-dist.sh
examples/: Mathics3-Extension-Gallery.ipynb  Mathics3-Extension-Introduction.ipynb  jupyter-notebook.ipynb  marimo_notebook.py
mathics3_kernel/frontend/: __init__.py  format.py  jupyter.py  markdown_mathics3.py  version.py
