[build-system]
requires = [
    "setuptools>=80", # CVE-2024-38335 and later CVE's recommend this
    "wheel",
    "packaging",
]
build-backend = "setuptools.build_meta"

[project]
description = "Jupyter, JupyterLite, marimo, Observable Notebook integration for Mathics3"
dependencies = [
    "Mathics3 >= 10.0.1",
    "setuptools",
    # The following is needed because latest versions of "chardet" (6.0
    # and above) are not supported with some versions of "requests". I
    # think the main important version restriction below is chardet<6.0.0
    # chardet 6+ and above is not compatible with "requests" (et. al?)
    "requests>=2.32.3",
    "urllib3>=1.21.1,< 3",
    "chardet>=3.0.2,< 6.0.0",
    "charset-normalizer>=2.0.0,< 4.0.0",
]
dynamic = ["version"]
license = "GPL-3.0-or-later"
name = "mathics3_notebook_frontends"
requires-python = ">=3.11"
maintainers = [
    {name = "Mathics3 Group", email = "mathics-devel@googlegroups.com"},
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Interpreters",
]
readme = "README.md"

[project.urls]
Homepage = "https://mathics.org/"
Downloads = "https://github.com/Mathics3/Mathics3-notebook-frontends/releases"

[project.optional-dependencies]
dev = [
    "check-jsonschema",
    "pytest",
    "pre-commit",
]

[[tool.mypy.overrides]]
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["mathics3_kernel.frontend"]

[tool.setuptools.dynamic]
version = {attr = "mathics3_kernel.frontend.version.__version__"}
